[package]
name = "quake"
version = "3.1.1"
authors = ["360 Quake Team <quake@360.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.12.2", features = ["blocking", "json"] }
serde = { version = "^1.0.197", features = ["derive"] }
serde_json = "^1.0.114"
clap = {version="^3.2.23", features=["cargo", "derive"]}
dirs = "^5.0.1"
log = "^0.4.20"
env_logger = "^0.11.3"
ansi_term = "^0.12.1"
chrono = "^0.4.35"
regex = "^1.10.4"
ipaddress = "^0.1.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1